[gd_scene load_steps=10 format=2]

[ext_resource path="res://Items/MegaMushroom.gd" type="Script" id=1]
[ext_resource path="res://Items/gfx/mega_box5.png" type="Texture" id=2]
[ext_resource path="res://Items/gfx/mega_box2.png" type="Texture" id=3]
[ext_resource path="res://Items/gfx/mega_box0.png" type="Texture" id=4]
[ext_resource path="res://Items/gfx/mega_box1.png" type="Texture" id=5]
[ext_resource path="res://Items/gfx/mega_box3.png" type="Texture" id=6]
[ext_resource path="res://Items/gfx/mega_box4.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 2 ) ],
"loop": false,
"name": "slideOutOfBox",
"speed": 4.0
} ]

[node name="MegaMushroom" type="KinematicBody2D"]
position = Vector2( 12, 12 )
collision_layer = 4
collision_mask = 69
script = ExtResource( 1 )

[node name="KinematicBodyCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7 )
scale = Vector2( 0.95, 0.9 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="MegaShroomSprite" type="AnimatedSprite" parent="Area2D"]
frames = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 1.6, 1.6 )
shape = SubResource( 1 )

[node name="DropSpawnTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 1.1
autostart = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="DropSpawnTimer" to="." method="_on_DropSpawnTimer_timeout"]
